crates/hir-ty/tests/snapshots/jls_final_capture__blank_instance_final_in_instance_initializer.snap
---
source: crates/hir-ty/tests/jls_final_capture.rs
expression: out
---
FILE /src/com/example/Final.java:
package com.example;

class Final {
    final int f;
    {
        f = 1;
    }
    Final() {
    }
}
