crates/hir-ty/tests/snapshots/jls_final_capture__blank_instance_final_qualified_this_in_constructor.snap
---
source: crates/hir-ty/tests/jls_final_capture.rs
expression: out
---
FILE /src/com/example/Final.java:
package com.example;

class Final {
    final int f;
    Final() {
        this.f = 1;
    }
}
