crates/hir-ty/tests/snapshots/jls_final_capture__blank_instance_final_written_from_instance_method.snap
---
source: crates/hir-ty/tests/jls_final_capture.rs
expression: out
---
FILE /src/com/example/Final.java:
package com.example;

class Final {
    final int f;
    Final() {
        f = 1;
    }
    void m() {
        f = 2;
    }
}

method m(): void
  @8:8..8:9 'f': cannot-assign-to-final-variable: Cannot assign a value to final variable 'f'
