crates/hir-ty/tests/snapshots/jls_final_capture__blank_static_final_double_assignment_sibling_blocks.snap
---
source: crates/hir-ty/tests/jls_final_capture.rs
expression: out
---
FILE /src/com/example/Final.java:
package com.example;

class Final {
    static final int sf;
    static {
        sf = 1;
    }
    static {
        sf = 2;
    }
}

static {}
  @8:8..8:10 'sf': variable-already-assigned: Variable 'sf' might already have been assigned
