crates/hir-ty/tests/snapshots/jls_final_capture__blank_static_final_in_static_field_initializer.snap
---
source: crates/hir-ty/tests/jls_final_capture.rs
expression: out
---
FILE /src/com/example/Final.java:
package com.example;

class Final {
    static final int sf;
    static int copy = sf = 1;
}
