crates/hir-ty/tests/snapshots/jls_final_capture__blank_static_final_written_from_static_method.snap
---
source: crates/hir-ty/tests/jls_final_capture.rs
expression: out
---
FILE /src/com/example/Final.java:
package com.example;

class Final {
    static final int sf;
    static {
        sf = 1;
    }
    static void m() {
        sf = 2;
    }
}

method m(): void
  @8:8..8:10 'sf': cannot-assign-to-final-variable: Cannot assign a value to final variable 'sf'
