crates/hir-ty/tests/snapshots/jls_final_capture__duplicate_identifier_spelled_with_unicode_escapes.snap
---
source: crates/hir-ty/tests/jls_final_capture.rs
expression: out
---
FILE /src/com/example/Dup.java:
package com.example;

class Dup {
    int a\u0031;
    int a1;

    void m\u0065th() {}
    void meth() {}
}

@4:8: duplicate-declaration: Variable 'a1' is already defined in the scope
method meth: duplicate-method: @7:9Method 'meth()' is already defined
